--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lib": "./lib"
   },
   "engines": {
-    "node": "*"
+    "node": ">= 0.4.0"
   },
   "dependencies": {
     "request": ">= 1.2.0"
